Ajout du lock de la composition

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -3,3 +3,6 @@ resourcepack:
   useResourcePackHosting: false
   generateResourcePack: false
   path: ./resourcepack/loup_garou.zip
+compo:
+  hidden: false
+  update_on_kill: true
